[tool.poetry]
name = "poetry-hooks"
version = "0.1.0"
description = ""
authors = ["Justin Vrana <justin.vrana@gmail.com>"]
packages = [
    {include = "poetry_hooks", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.6"
pytest-xdist = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"

[tool.poetry.scripts]
poetry-version-up = 'poetry_hooks.version_up:main'
poetry-export = 'poetry_hooks.export:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
