[tool.poetry]
name = "poetry-hooks"
version = "0.4.2"
description = ""
authors = ["Justin Vrana <justin.vrana@gmail.com>"]
packages = [
    {include = "poetry_hooks", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
poetry-version-up = 'poetry_hooks.version_up:main'
poetry-export = 'poetry_hooks.export:main'

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest]
show-capture=true

[tool.poetry_hooks]
version_up_path='_version.py'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
